--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   firebase_core: ^3.15.1
   cloud_firestore: ^5.6.11
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
