--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_core: ^3.15.1
   cloud_firestore: ^5.6.11
   flutter_bloc: ^9.1.1
+  flutter_dotenv: ^5.2.1
+  geolocator: ^14.0.2
+  cached_network_image: ^3.4.1
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
