--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -44,6 +44,10 @@
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to your location to show nearby landmarks.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs location access even when the app is in the background.</string>
 	<true/>
 </dict>
 </plist>
