--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,14 @@ dependencies:
   cloud_firestore: ^5.6.11
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
-  geolocator: ^14.0.2
+  #geolocator: ^14.0.2
+  geolocator: ^12.0.0
   cached_network_image: ^3.4.1
   http: ^1.4.0
+  ar_flutter_plugin_2: ^0.0.3
+  auto_size_text: ^3.0.0
+  vector_math: any
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
