--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
   assets:
     - .env
     - assets/images/tt.png
-    - assets/images/historical_image.png
+    - assets/images/historical_image.jpg
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
