--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - .env
     - assets/images/tt.png
     - assets/images/historical_image.jpg
+    - assets/models/Billboard.glb
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
