--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   vector_math: any
   permission_handler: ^11.4.0
   image_gallery_saver_plus: ^4.0.1
+  google_maps_flutter: ^2.12.3
 
 dev_dependencies:
   flutter_test:
