Walking Tour View

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^11.4.0
   image_gallery_saver_plus: ^4.0.1
   google_maps_flutter: ^2.12.3
+  flutter_polyline_points: ^3.0.1
 
 dev_dependencies:
   flutter_test:
