--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: time_trails
-description: "A new Flutter project."
+description: "Google Map Hackathon."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -80,8 +80,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
-    - assets/images/tt.png
     - assets/images/LTS.png
     - assets/images/historical_image.jpg
     - assets/models/Billboard.glb
@@ -114,4 +112,4 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/TTIcon.png"
+  image_path: "assets/icon/TTLogo.png"
